[package]
name = "lib_encryption_hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 =  {version = "0.5.2", features = ["alloc", "rand", "default", "password-hash", "std", "simple", "zeroize"] }
